# ontrack-cli

./: .gitignore  LICENSE  README.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
ontrack_cli/: __init__.py  auth.py  cli.py  client.py  config.py  constants.py  exceptions.py  formatter.py  models.py  output.py
release-notes/: v0.1.0.md
tests/: test_cli.py  test_config.py
